objects/WorkType.object
<CustomObject>
    <fields>
        <fullName>Checkbox_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Due_Date_Offset__c</fullName>
        <description>Minutes</description>
        <inlineHelpText>Calculates the Due Date by adding Minutes to the Service creation time, reflecting the organisation&apos;s internal SLA</inlineHelpText>
        <label>Due Date Offset</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Exact_Appointments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exact Appointments</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_WorkTypes</fullName>
        <columns>Name</columns>
        <columns>DurationType</columns>
        <columns>DurationInMinutes</columns>
        <columns>FSL__Due_Date_Offset__c</columns>
        <columns>ShouldAutoCreateSvcAppt</columns>
        <columns>EstimatedDuration</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Type</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>